[gd_scene load_steps=13 format=3 uid="uid://cee3aickw8qoq"]

[ext_resource type="Script" path="res://Game/levelselection_.gd" id="1_fhj4d"]
[ext_resource type="Texture2D" uid="uid://du8ifdtt0t143" path="res://plx-5.png" id="1_xlmfh"]
[ext_resource type="FontFile" uid="uid://c5ugfyiakbt23" path="res://JungleClean.ttf" id="2_uxokp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ombmw"]
texture = ExtResource("1_xlmfh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qlhae"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tme1j"]
bg_color = Color(0.0858381, 0.502003, 0.508724, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(10, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gojf7"]
bg_color = Color(0.0614171, 0.399292, 0.404754, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(10, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6enl"]
bg_color = Color(0.105882, 0.592157, 0.6, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(10, 5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4rl3b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8453"]
bg_color = Color(0.0911492, 0.525262, 0.532271, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(10, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20hy6"]
bg_color = Color(0.0818222, 0.484662, 0.491169, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(10, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sstfx"]
bg_color = Color(0.105882, 0.592157, 0.6, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(10, 5)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhj4d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ombmw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -525.0
offset_top = -111.0
offset_right = 531.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 63

[node name="level 1" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 93
theme_override_styles/focus = SubResource("StyleBoxEmpty_qlhae")
theme_override_styles/hover = SubResource("StyleBoxFlat_tme1j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gojf7")
theme_override_styles/normal = SubResource("StyleBoxFlat_q6enl")
text = "Level 1"

[node name="level 2" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 93
theme_override_styles/focus = SubResource("StyleBoxEmpty_qlhae")
theme_override_styles/hover = SubResource("StyleBoxFlat_tme1j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gojf7")
theme_override_styles/normal = SubResource("StyleBoxFlat_q6enl")
text = "Level 2"

[node name="level 3" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 93
theme_override_styles/focus = SubResource("StyleBoxEmpty_qlhae")
theme_override_styles/hover = SubResource("StyleBoxFlat_tme1j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gojf7")
theme_override_styles/normal = SubResource("StyleBoxFlat_q6enl")
text = "Level 3"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = 81.0
offset_right = 358.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 69

[node name="level 4" type="Button" parent="HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 93
theme_override_styles/focus = SubResource("StyleBoxEmpty_4rl3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_i8453")
theme_override_styles/pressed = SubResource("StyleBoxFlat_20hy6")
theme_override_styles/normal = SubResource("StyleBoxFlat_sstfx")
text = "Level 4"

[node name="level 5" type="Button" parent="HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 93
theme_override_styles/focus = SubResource("StyleBoxEmpty_4rl3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_i8453")
theme_override_styles/pressed = SubResource("StyleBoxFlat_20hy6")
theme_override_styles/normal = SubResource("StyleBoxFlat_sstfx")
text = "Level 5"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_uxokp")
theme_override_font_sizes/font_size = 133
text = "Level Selection"

[connection signal="pressed" from="HBoxContainer/level 1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="HBoxContainer/level 2" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="HBoxContainer/level 3" to="." method="_on_level3_pressed"]
[connection signal="pressed" from="HBoxContainer2/level 4" to="." method="_on_level4_pressed"]
[connection signal="pressed" from="HBoxContainer2/level 5" to="." method="_on_level5_pressed"]
